--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="start">начать</string>
     <string name="back">Назад</string>
     <string name="level">Уровень:</string>
+    <string name="level1">Уровень 1</string>
+    <string name="textcontinue">Продолжить</string>
 
 </resources>
